--- a/surveyor-web/src/home-page/home-page.ng.html
+++ b/surveyor-web/src/home-page/home-page.ng.html
@@ -1,6 +1,10 @@
 <mat-progress-bar *ngIf="!(networks | async)"></mat-progress-bar>
-<app-network-card *ngFor="let network of networks | async"
-  [ssid]="network.ssid"
-  [channel]="network.channel"
-  [documentId]="network.id">
-</app-network-card>
+<mat-card *ngFor="let network of networks | async">
+  <mat-card-header>
+    <mat-card-title>{{network.ssid}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-network-card [ssid]="network.ssid" [devices]="values(network.devices)">
+    </app-network-card>
+  </mat-card-content>
+</mat-card>
