--- a/surveyor-web/src/home-page/home-page.ng.html
+++ b/surveyor-web/src/home-page/home-page.ng.html
@@ -1,12 +1,18 @@
-<mat-progress-bar *ngIf="!(networks | async)"></mat-progress-bar>
-<mat-card *ngFor="let network of networks | async">
-  <mat-card-header>
-    <mat-card-title>
-      <button mat-raised-button (click)="navigateTo(network.ssid)">{{network.ssid}}</button>
-    </mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <app-network-card [ssid]="network.ssid" [devices]="values(network.devices)">
-    </app-network-card>
-  </mat-card-content>
-</mat-card>
+<mat-table [dataSource]="networks | async" class="mat-elevation-z8">
+  <!-- SSID Column -->
+  <ng-container matColumnDef="ssid">
+    <mat-header-cell mat-header-cell *matHeaderCellDef> SSID </mat-header-cell>
+    <mat-cell *matCellDef="let network">
+      <button mat-button (click)="navigateTo(network.ssid)">{{network.ssid}}</button>
+    </mat-cell>
+  </ng-container>
+
+  <!-- Active Devices Column -->
+  <ng-container matColumnDef="activeDeviceCount">
+    <mat-header-cell mat-header-cell *matHeaderCellDef> Active Devices </mat-header-cell>
+    <mat-cell *matCellDef="let network"> {{network.activeDeviceCount}} </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
